app/PokeScout/common/nfc/src/main/java/com/example/nfc/error/NfcReadException.kt
package com.example.nfc.error

sealed class NfcReadException: Exception() {
    data object NotNdefFormattedException: NfcReadException()
    data object NullNdefMessageException: NfcReadException()
}